// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app fetchApp can't fetch an app 1`] = `
Array [
  Object {
    "type": "APP_GET_NEXT",
  },
  Object {
    "payload": "api had some issue",
    "type": "APP_GET_ERROR",
  },
]
`;

exports[`app fetchApp fetches app version events 1`] = `
Array [
  Object {
    "type": "APP_GET_NEXT",
  },
  Object {
    "payload": Object {
      "androidErrors": Array [],
      "appSlug": "test-app-slug-1",
      "avatarUrl": "https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png",
      "iosErrors": Array [],
      "plan": "gold",
      "projectType": "other",
      "title": "Awesome app",
    },
    "type": "APP_GET_COMPLETE",
  },
]
`;

exports[`app fetchApp fetches app version events 2`] = `Object {}`;

exports[`app reducer loads an app 1`] = `
Object {
  "app": Object {
    "androidErrors": Array [],
    "appSlug": "test-app-slug-1",
    "avatarUrl": "icon.url",
    "iosErrors": Array [],
    "plan": "gold",
    "projectType": "other",
    "title": "Awesome app",
  },
  "selectedPlatform": "ios",
}
`;

exports[`app reducer selects a platform 1`] = `
Object {
  "app": null,
  "selectedPlatform": "ios",
}
`;
